[package]
name = "log-tree"
version = "0.1.0"
edition = "2018"

description = "This library used for printing tree structure in command line."
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/log-tree.rs"
license = "Apache-2.0"
keywords = ["tree"]

[dependencies]
